Logo size fix on mobile

--- a/src/pages/partials/header.css
+++ b/src/pages/partials/header.css
@@ -136,7 +136,7 @@
         margin: 0;
     }
     .brandNavLogo{
-        width: 15rem;
+        width: 14.2rem;
         height: 7.5rem;
     }
     .scrolled .brandNavLogo{
